rest-frontend: fix alignment of 'show on github' button

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -220,6 +220,10 @@ div.docu.markdown img {
     max-width: 100%;
 }
 
+div.docu.markdown pre {
+    width: 100%;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
